--- a/web2py/applications/menuet/views/core/e_rest.html
+++ b/web2py/applications/menuet/views/core/e_rest.html
@@ -30,8 +30,7 @@
                                 <span class="input-group-addon"><i
                                         class="fas fa-map-marker-alt"></i></span>
                                 <input class="form-control" required name="rest_addr" id="rest_addr"
-                                       value="{{=rest.addr}}"
-                                       onchange="get_addr()"></div>
+                                       value="{{=rest.addr}}"></div>
                             <p class="text-muted"><em>Например: Москва, ул. </em></p>
                         </div>
                         <input type="button" class="btn btn-primary" onclick="submitForm()" value="Сохранить!">
