--- a/web2py/applications/menuet/views/core/a_item.html
+++ b/web2py/applications/menuet/views/core/a_item.html
@@ -1,4 +1,5 @@
 {{extend "layout.html"}}
+
 <style>
     .ui-autocomplete-loading {
         background: white url("{{=URL('static', 'images/ui-anim_basic_16x16.gif')}}") right center no-repeat;
@@ -115,14 +116,13 @@
     }
 
 </style>
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
 <div class="container">
 {{if  not 'itm_id' in request.vars:}}
     <h1>Новый предмет в меню</h1>
 {{else:}}
     <h1>Изменить предмет</h1>
-    {{pass}}
+{{pass}}
     <div class="row">
         <div class="col-sm-4">
 
@@ -138,25 +138,33 @@
                     <div class="form-group input-group">
                         <span class="input-group-addon"><i class="fas fa-ruble-sign"
                                                            style="width: 20px;height: 16px"></i> </span>
-                        <input type="number" id="item_price" value="{{=item.price}}" class="form-control" placeholder="Цена">
+                        <input type="number" id="item_price" value="{{=item.price}}" class="form-control"
+                               placeholder="Цена">
                     </div>
                     <div class="form-group input-group">
                         <span class="input-group-addon"><i class="fas fa-balance-scale"></i> </span>
-                        <input type="number" id="item_weight" value="{{=item.weight}}" class="form-control" placeholder="Вес / Объем">
+                        <input type="number" id="item_weight" value="{{=item.weight}}" class="form-control"
+                               placeholder="Вес / Объем">
                         <span class="input-group-addon"><select id="item_weight">
                             <option>Выберите...</option>
-                            {{for opt in units:}}
+                        {{for opt in units:}}
                             <option value="{{=opt.id}}">{{=opt.f_name}}, {{=opt.f_description}}</option>
-                            {{pass}}
+                        {{pass}}
                         </select></span>
                     </div>
                     <div class="form-group">
                         <label class="font-weight-bold">Описание</label>
-                        <textarea type="text" placeholder="{{=item.desc}}" id="item_desc" class="form-control"></textarea>
+                        <textarea type="text" placeholder="{{=item.desc}}" id="item_desc"
+                                  class="form-control"></textarea>
                         <em class="text-muted">Фирменная паста с креветками, кальмарами и мидиями в сливочном...</em>
                     </div>
                     <div class="form-group">
-                        <label class="font-weight-bold">Ингридиенты</label>
+                        <label class="font-weight-bold">Ингридиенты</label><i class="fa fa-question-circle"
+                                                                              data-toggle="tooltip"
+                                                                              data-placement="right"
+                                                                              title="Ингридиенты будут авто-дополняться, если ингридиента нет - добавится новый"
+                                                                              style="color:red">
+                    </i>
                         <input type="text" id="item_ingrs" class="form-control bs-autocomplete ui-autocomplete-input">
                         <em class="text-muted">Спагетти, кальмары, мидии, помидоры</em>
                     </div>
@@ -170,6 +178,12 @@
     </div>
 </div>
 <script>
+    $(document).ready(function () {
+        $(function () {
+            $('[data-toggle="tooltip"]').tooltip()
+        })
+    });
+
     $(function () {
         function split(val) {
             return val.split(/,\s*/);
@@ -253,7 +267,7 @@
                     .data('ui-autocomplete')._renderItem = function (ul, item) {
                 return $('<li></li>')
                         .data("item.autocomplete", item)
-                        .append('<li>' + item.label + +'</li><br> ')
+                        .append('<li>' + item.label + '</li>')
                         .appendTo(ul);
             };
             // end autocomplete
