--- a/web2py/applications/menuet/views/core/e_rest.html
+++ b/web2py/applications/menuet/views/core/e_rest.html
@@ -19,6 +19,10 @@
                             <label>
                             {{if rest.is_network:}}
                                 <input type="checkbox" id="is_network" checked> Сетевой ?
+                                <div id="is_network_div" class="form-group input-group">
+                                    <input id="search_net" name="search_net" type="text"
+                                           placeholder="Введите имя сети..." class="form-control">
+                                </div>
                             {{else:}}
                                 <input type="checkbox" id="is_network"> Сетевой ?
                             {{pass}}
@@ -88,7 +92,7 @@
                     <div class="form-group">
                         <label class="font-weight-bold">Тип меню</label>
                         <i class="fa fa-question-circle" data-toggle="tooltip" data-placement="right"
-                                title="Напитки/вино/Чай/кофе/мясо/рыба и т.д. - все в основное меню" style="color:red">
+                           title="Напитки/вино/Чай/кофе/мясо/рыба и т.д. - все в основное меню" style="color:red">
                         </i>
                         <select id="menu_type" class="form-control">
                         {{for option_type in menu_types:}}
@@ -116,22 +120,22 @@
 
 <link href="https://cdn.jsdelivr.net/npm/suggestions-jquery@17.12.0/dist/css/suggestions.min.css" type="text/css"
       rel="stylesheet"/>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <!--[if lt IE 10]>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-ajaxtransport-xdomainrequest/1.0.1/jquery.xdomainrequest.min.js"></script>
 <![endif]-->
 <script type="text/javascript"
         src="https://cdn.jsdelivr.net/npm/suggestions-jquery@17.12.0/dist/js/jquery.suggestions.min.js"></script>
 
+<script type="text/javascript" src="{{=URL('static', 'js/shadow_sugg.min.js')}}"></script>
 <script>
     $(document).ready(function () {
-        $('#seosanal_checkbox').change(function () {
+        $('#is_network').change(function () {
             if (this.checked) {
-                $('#seasonal_div').removeAttr('hidden');
-                $('#seasonal_div').fadeIn('slow');
+                $('#is_network_div').removeAttr('hidden');
+                $('#is_network_div').fadeIn('slow');
             }
             else
-                $('#seasonal_div').fadeOut('slow');
+                $('#is_network_div').fadeOut('slow');
 
         });
         $(function () {
@@ -169,6 +173,15 @@
     }
 
     $("#rest_addr").suggestions({
+        token: "bf69a05b6ce842dcd0cbc159648d19a8c49fdf33",
+        type: "ADDRESS",
+        count: 5,
+        onSelect: function (suggestion) {
+            console.log(suggestion);
+        }
+    });
+
+    $("#search_net").huections({
         token: "bf69a05b6ce842dcd0cbc159648d19a8c49fdf33",
         type: "ADDRESS",
         count: 5,
