--- a/web2py/applications/menuet/views/core/a_item.html
+++ b/web2py/applications/menuet/views/core/a_item.html
@@ -37,17 +37,15 @@
                             <span class="input-group-addon"><i class="fas fa-chart-pie"
                                                                style="width: 20px;height: 16px"></i> </span>
                             <select id="portion_size" class="form-control">
-                                <option value="1">Стандартная</option>
-                                <option value="2">Большая</option>
-                                <div class="form-group input-group">
-                                    <input type="number" id="item_price" value="{{=item.price}}" class="form-control"
-                                           placeholder="Цена">
-                                    <div id="add_portion" class="form-group"></div>
-                                    <input class="btn btn-success" id="addrow_id0" type="button" value=" + "
-                                           title="Добавить еще порцию" onclick="addRow()">
-                                </div>
+                            {{for portion in portions:}}
+                                <option value="{{=portion.id}}">{{=portion.f_name}}</option>
+                            {{pass}}
+                                <input type="number" id="item_price" value="{{=item.price}}" class="form-control"
+                                       placeholder="Цена">
+                                <div id="add_portion" class="form-group"></div>
+                                <input class="btn btn-success" id="addrow_id0" type="button" value=" + "
+                                       title="Добавить еще порцию" onclick="addRow()">
                             </select>
-
                         </div>
                     </form>
                     <div class="form-group">
@@ -58,10 +56,10 @@
                     </div>
                     <div class="form-group">
                         <label class="font-weight-bold">Ингридиенты</label> <i class="fa fa-question-circle"
-                                                                              data-toggle="tooltip"
-                                                                              data-placement="right"
-                                                                              title="Ингридиенты будут авто-дополняться, если ингридиента нет - добавится новый"
-                                                                              style="color:red">
+                                                                               data-toggle="tooltip"
+                                                                               data-placement="right"
+                                                                               title="Ингридиенты будут авто-дополняться, если ингридиента нет - добавится новый"
+                                                                               style="color:red">
                     </i>
                         <input type="text" id="item_ingrs" class="form-control bs-autocomplete ui-autocomplete-input">
                         <em class="text-muted">Спагетти, кальмары, мидии, помидоры</em>
@@ -83,8 +81,8 @@
         d.innerHTML += '<div class="form-group input-group">' +
                 '<span class="input-group-addon"><i class="fas fa-chart-pie" style="width: 20px;height: 16px"></i> </span>' +
                 '<select id="portion_size' + counter + '" class="form-control">' +
-                '<option value="1">Стандартная</option>' +
-                '<option value="2">Большая</option>' +
+                 {{for portion in portions:}}
+                '<option value="{{=portion.id}}">{{=portion.f_name}}</option>'+{{pass}}
                 '<div class="form-group input-group">' +
                 '<input type="number" id="item_price' + counter + '" value="{{=item.price}}" class="form-control" placeholder="Цена">' +
                 '<div id="add_portion' + counter + '" class="form-group"></div>' +
