--- a/web2py/applications/menuet/views/core/e_rest.html
+++ b/web2py/applications/menuet/views/core/e_rest.html
@@ -20,25 +20,28 @@
                             {{if rest.is_network:}}
                                 <input type="checkbox" id="is_network" checked> Сетевой ?
                                 <input type="hidden" id="network_id">
+                                <div id="net_div"></div>
                             {{else:}}
                                 <input type="checkbox" id="is_network"> Сетевой ?
+                                <div id="net_div"></div>
+
                             {{pass}}
+                                <div class="form-group">
+                                    <div id="is_network_div" hidden>
+                                        <label class="font-weight-bold">Имя сети</label>
+                                        <div class="input-group">
+                                            <span class="input-group-addon"><i class="fas fa-sitemap"></i></span>
+                                            <input class="form-control" placeholder="Выберите сеть" required
+                                                   name="search_net"
+                                                   id="search_net"
+                                                   value="{{=rest.f_network_name}}">
+                                        </div>
+                                        <p class="text-muted"><em>Например: Грабли </em></p>
+                                    </div>
+                                </div>
                             </label>
                         </div>
-                        <div class="form-group">
-                            <div id="is_network_div">
 
-                                <label class="font-weight-bold">Имя сети</label>
-                                <div class="input-group">
-                                <span class="input-group-addon"><i
-                                        class="fas fa-sitemap"></i></span>
-                                    <input class="form-control" placeholder="Выберите сеть" required name="search_net"
-                                           id="search_net"
-                                           value="{{=rest.f_network_name}}">
-                                </div>
-                                <p class="text-muted"><em>Например: Грабли </em></p>
-                            </div>
-                        </div>
                         <div class="form-group">
                             <label class="font-weight-bold">Адрес ресторана</label>
                             <div class="input-group">
@@ -142,6 +145,10 @@
 <script type="text/javascript" src="{{=URL('static', 'js/shadow_sugg.min.js')}}"></script>
 <script>
     $(document).ready(function () {
+    {{if rest.is_network:}}
+        $('#is_network_div').removeAttr('hidden');
+    {{pass}}
+
         $('#is_network').change(function () {
             if (this.checked) {
                 $('#is_network_div').removeAttr('hidden');
