--- a/web2py/applications/menuet/views/core/e_rest.html
+++ b/web2py/applications/menuet/views/core/e_rest.html
@@ -45,6 +45,18 @@
                         </div>
 
                         <div class="form-group">
+                            <label class="font-weight-bold">Город</label>
+                            <div class="input-group">
+
+                                <span class="input-group-addon">
+                                    <i class="fas fa-building"></i>
+                                                                    </span>
+
+                                <input class="form-control" required id="rest_town" value="{{=rest.town}}"
+                                       type="text">
+                            </div>
+                                                            <p class="text-muted"><em>Например: Волгоград</em></p>
+
                             <label class="font-weight-bold">Адрес ресторана</label>
                             <div class="input-group">
                                 <span class="input-group-addon"><i
@@ -172,6 +184,7 @@
         rest.addr = document.getElementById('rest_addr').value;
         rest.is_network = document.getElementById('is_network').checked;
         rest.r_id = "{{=request.vars.r_id}}";
+        rest.town = document.getElementById('rest_town').value;
 
         var DTO = {'rest': rest};
         var data = JSON.stringify(DTO);
