--- a/web2py/applications/menuet/views/core/e_rest.html
+++ b/web2py/applications/menuet/views/core/e_rest.html
@@ -209,7 +209,7 @@
 
     function fill_network(net) {
         var rest = {};
-        rest.id = "{{=request.vars.r_id}}}";
+        rest.id = "{{=request.vars.r_id}}";
         var network = {};
         network.id = net.id;
 
